Fixed problem with extra space under video in header. Updated text content to better reflect my message.

--- a/style.css
+++ b/style.css
@@ -4,17 +4,18 @@
 
 body {
   margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Orbitron', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1rem;
-  line-height: 1.5;
+  line-height: 1.8;
   color: #333;
   overflow-x: hidden;
 }
 
 .v-header {
-  height: 100vh;
+  height: 756px;
   display: flex;
   align-items: center;
+  justify-content: center;
   color: #fff;
 }
 
@@ -28,25 +29,25 @@ body {
 
 .fullscreen-video-wrap {
   position: absolute;
-    top: -50%;
-    left: -50%;
-    width: 200%;
-    height: 147%;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 147%;
 }
 
 .fullscreen-video-wrap video {
   position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    margin: auto;
-    min-height: 50%;
-    min-width: 50%;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  min-height: 50%;
+  min-width: 50%;
 }
 
 .header-overlay {
-  height: 100vh;
+  height: 756px;
   width: 100vw;
   position: absolute;
   top: 0;
@@ -62,6 +63,7 @@ body {
 
 .header-content h1 {
   font-size: 50px;
+  line-height: 1.5;
   margin-bottom: 0;
 }
 
@@ -89,9 +91,9 @@ body {
 }
 
 
-@media(max-width: 960px) {
+/* @media(max-width: 960px) {
   .container {
     padding-right: 3rem;
     padding-left: 3rem;
   }
-}
+} */
